--- a/index.html
+++ b/index.html
@@ -1,85 +1,255 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<link rel="stylesheet" href="view/style/style.css">
-     <title>ACCUEIL</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Accueil</title>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"
+    integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous" />
 </head>
+
 <body>
-    <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <div class="container-xxxl bg-light">
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
-            <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
-          </svg></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+  <div class="container-xxxl">
+    <nav class="navbar bg-white">
+      <div class="container-xl">
+        <a class="navbar-brand" href="#">
+          <img src="bestof.jpg" alt="logo" width="30" height="24">
+        </a>
+        <form class="d-flex" role="search">
+          <button type="button" class="btn btn-light">
+            <i class="fas fa-search"></i>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                 Services
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Projects
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">About</a>
-                  </li>
-              </li>
-                </ul>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <button class="btn btn-dark"><a class="a text-light" href="#">Contact us</a></button>
-            </form>
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        </form>
+        <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
+        <label class="btn btn-inline-black" for="btncheck1">Home</label>
+
+        <input type="checkbox" class="btn-check" id="btncheck2" autocomplete="off">
+        <label class="btn btn-inline-black" for="btncheck2">About</label>
+
+        <input type="checkbox" class="btn-check" id="btncheck2" autocomplete="off">
+        <label class="btn btn-inline-black" for="btncheck2">Shop</label>
+
+        <input type="checkbox" class="btn-check" id="btncheck3" autocomplete="off">
+        <label class="btn btn-inline-black" for=btncheck3">Help</label>
+
+        <button type="button" class="btn btn-secondary btn-lg"><a href="shop.html"
+            style="color: #FFFFFF; text-decoration: none;"></a></label>
+          <i class="fas fa-shopping-cart"></i>
+          Your Cart
+        </button>
+    </nav>
+    <pre><p class="fs-1" style="text-align: center ";>Tagline describing your e-shop</p></pre>
+
+    <center>
+      <div style="width: 25%;">
+        <hr>
+      </div>
+      
+    </center>
+
+    <div class="container px-4 text-center">
+      <div class="row gx-0">
+        <div class="col">
+          <div class="p-3 "><img src="bestof.jpg" alt="" width="80%" height="80%"></div>
+        </div>
+        <div class="col">
+          <div class="p-3 "><img src="bestof.jpg" alt="" width="80%" height="80%"></div>
+        </div>
+        <div class="col">
+          <div class="p-3 "><img src="bestof.jpg" alt="" width="80%" height="80%"></div>
+        </div>
+      </div>
+    </div>
+
+    <pre>
+  </pre>
+
+    <div>
+      <center><button type="button" class="btn btn-secondary btn-lg"><a href="#"
+            style="color: #FFFFFF; text-decoration: none;">Shop Now</a></label>
+        </button></center>
+    </div>
+
+    <div>
+      <hr>
+    </div>
+
+    <pre><p class="fs-1" style="text-align: center ;">Featured Products</p></pre>
+
+    <div class="container px-4 text-center">
+      <div class="row gx-0">
+        <div class="col">
+          <div class="p-3 "><img src="bestof.jpg" alt="" width="80%" height="80%"></div>
+          <div class="card-body">
+            <p class="card-text"><strong>product name<br>$300 </strong> </p>
           </div>
         </div>
-      </nav> 
-      <div class="container-xl">
-        <div class="row bg-dark " style="padding:0.1em">
-            <div class="col-8 bg-light rounded-4 p-4"><p class="fs-1 "><strong class="police">Look<br>beyond<br>limits</strong></p></div>
-            <div class="col-4 bg-light rounded-4 p-4"></div>
+        <div class="col">
+          <div class="p-3 "><img src="bestof.jpg" alt="" width="80%" height="80%"></div>
+          <div class="card-body">
+            <p class="card-text"><strong>Product name<br>$300 </strong></p>
+          </div>
         </div>
-    <div class="row bg-dark" style="padding-left: 0.1em; padding-right: 0.1em; padding-bottom: 0.1em;">
-                <div class="col rounded-4 bg-light fs-4 p-5">
-                    They are very <br>
-                    proactive and work to <br>
-                    make your product <br>
-                    even better.
-                </div>
-<div class="col rounded-4 bg-light fs-4 p-5">
-                    <p>The most experienced, <br>
-                        specialised team across <br>
-                        the industry. <br></p>
-                    <p class="blockquote-footer"><u>Work with us</u></p>
-                </div>
-                <div class="col rounded-4 bg-light display-1 p-5"><strong class="police">3D</strong>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+
+    <div>
+      <hr>
+    </div>
+
+    <nav class="navbar navbar-expand-lg ">
+      <div class="container-xl">
+        <p class="fs-6"><strong style="font-size: xx-large;">NewsLetter</strong><br>Lorem ipsum dolor sit amet,
+          consectetur adipiscing<br>
+          elit Aenean vel scelerisque massa massa</p>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Email adresse" aria-label="Search">
+          <button class="btn btn-outline-secondary" type="submit"> <a href="#"
+              style="color: #000000; text-decoration: none;">Subcribe</a> </button>
+        </form>
+      </div>
+    </nav>
+    <div>
+      <hr>
+    </div>
+    <div class="container-xl">
+      <div class="d-flex display">
+
+        <div class="align-content= flex-start">
+          <img src="bestof.jpg" class="flex-start" alt="..." width="600px" height="390px">
+          <div class="card-text">Product Name <br>$300
+          </div>
+        </div>
+
+        <div class="row row-cols-1 row-cols-md-2 g-2" style=" margin-left: 45px;">
+          <div class="col">
+            <img src="bestof.jpg" class="card-img-top" alt="...">
+            <div class="card-text">Product Name <br>$300
+            </div>
+          </div>
+          <div class="col">
+            <img src="bestof.jpg" class="card-img-top" alt="...">
+            <div class="card-text">Product Name <br>$300
+            </div>
+          </div>
+          <div class="col">
+            <img src="bestof.jpg" class="card-img-top" alt="...">
+            <div class="card-text">Product Name <br> $300
+            </div>
+          </div>
+          <div class="col">
+            <img src="bestof.jpg" class="card-img-top" alt="...">
+            <div class="card-text">Product Name <br>$300
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <hr>
+    </div>
+    <div class="container-xl text-center">
+      <p class="fs-1">About Your Shop</p>
+      <p class="fs-6">Lorem ipsum dolor sit amet, consectetur adipiscing Lorem ipsum dolor sit amet,<br>
+        elit Aenean vel scelerisque massa,Nulla eumassa,Nu Lorem ipsum dolor sit amet,<br></p>
+    </div>
+    <div>
+      <hr>
+
+      <footer class="bg-white text-dark pt-5 pb-4">
+
+        <div class="container text-center text-md-left">
+
+          <div class="row text-center text-md-left">
+
+            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto">
+              <img src="bestof.jpg" alt="photo" width="70%" height="70%">
+              <div style="width: 95%;">
+                <hr>
+                <p>1/17 Harisson san francisco blabla,<br>Cacoco1202 SN</p>
+              </div>
+            </div>
+
+            <div class="col-md col-lg-2 col-xl mx-auto">
+              <h5 class="text-uppercase mb-4 font-weight-bold text-darkt">Main menu</h5>
+
+              <p>
+                <a href="#" class="text-dark" style="text-decoration: none;">Home</a>
+              </p>
+              <p>
+                <a href="#" class="text-dark" style="text-decoration: none;">About</a>
+              </p>
+              <p>
+                <a href="#" class="text-dark" style="text-decoration: none;">Hope</a>
+              </p>
+              <p>
+                <a href="#" class="text-dark" style="text-decoration: none;">Help</a>
+              </p>
+            </div>
+
+            <div class="col-md col-lg-2 col-xl mx-auto">
+              <h5 class="text-uppercase mb-4 font-weight-bold text-dark">COMPANY</h5>
+
+              <p>
+                <a href="#" class="text-dark" style="text-decoration: none;">The Company</a>
+              </p>
+              <p>
+                <a href="#" class="text-dark" style="text-decoration: none;">Careers</a>
+              </p>
+              <p>
+                <a href="#" class="text-dark" style="text-decoration: none;">Press</a>
+              </p>
+
+            </div>
+
+            <div class="col-md col-lg-2 col-xl mx-auto">
+              <h5 class="text-uppercase mb-4 font-weight-bold text-dark">DISCOVER</h5>
+
+              <p>
+                <a href="#" class="text-dark" style="text-decoration: none;">The team</a>
+              </p>
+              <p>
+                <a href="#" class="text-dark" style="text-decoration: none;">Our History</a>
+              </p>
+              <p>
+                <a href="#" class="text-dark" style="text-decoration: none;">Brand Motto</a>
+              </p>
+
+            </div>
+
+            <div class="col-md col-lg-2 col-xl mx-auto">
+              <h5 class="text-uppercase mb-4 font-weight-bold text-dark">FIND US ON</h5>
+
+              <p>
+                <a href="#" class="text-dark" style="text-decoration: none;">Facebook</a>
+              </p>
+              <p>
+                <a href="#" class="text-dark" style="text-decoration: none;">Twiter</a>
+              </p>
+              <p>
+                <a href="#" class="text-dark" style="text-decoration: none;">Instagram</a>
+              </p>
+
+            </div>
+
+      </footer>
+
+      <hr>
+    </div>
+    <p class="fs-6"><i class="fas fa-car"></i>Your Compagny Name</p>
+
+  </div>
 </body>
+
 </html>
