--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
       <hr>
     </div>
-    <p class="fs-6"><i class="fas fa-car"></i>Your Compagny Name</p>
+    <p class="fs-6"><i class="fas fa-car"></i>Your Compagny Name VR</p>
 
   </div>
 </body>
