--- a/index.html
+++ b/index.html
@@ -1,85 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<link rel="stylesheet" href="view/style/style.css">
-     <title>ACCUEIL</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
+    </script>
+  <link rel="stylesheet" href="view\style.css">
+  <link href="https://fr.allfont.net/allfont.css?fonts=montserrat" rel="stylesheet" type="text/css" />
+  <title>INDEX</title>
+  <style>
+    body {
+      font-family: 'Montserrat', arial;
+    }
+  </style>
 </head>
+
 <body>
-    <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <div class="container-xxxl bg-light">
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
-            <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
-          </svg></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                 Services
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Projects
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">About</a>
-                  </li>
-              </li>
-                </ul>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <button class="btn btn-dark"><a class="a text-light" href="#">Contact us</a></button>
-            </form>
-          </div>
-        </div>
-      </nav> 
-      <div class="container-xl">
-        <div class="row bg-dark " style="padding:0.1em">
-            <div class="col-8 bg-light rounded-4 p-4"><p class="fs-1 "><strong class="police">Look<br>beyond<br>limits</strong></p></div>
-            <div class="col-4 bg-light rounded-4 p-4"></div>
-        </div>
-    <div class="row bg-dark" style="padding-left: 0.1em; padding-right: 0.1em; padding-bottom: 0.1em;">
-                <div class="col rounded-4 bg-light fs-4 p-5">
-                    They are very <br>
-                    proactive and work to <br>
-                    make your product <br>
-                    even better.
-                </div>
-<div class="col rounded-4 bg-light fs-4 p-5">
-                    <p>The most experienced, <br>
-                        specialised team across <br>
-                        the industry. <br></p>
-                    <p class="blockquote-footer"><u>Work with us</u></p>
-                </div>
-                <div class="col rounded-4 bg-light display-1 p-5"><strong class="police">3D</strong>
-                </div>
-            </div>
-        </div>
+
+  <nav class="navbar bg-black">
+    <div class="col">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img class="first" style="border-radius: 200px;" src="view\bestof.jpg" alt="logo" width="5%" height="5%">
+        </a>
+        <button type="button" class="btn btn-success"> <a href="view\accueil.html"
+            style="color: white; text-decoration: none;">Accueil</a></button>
+        <button type="button" class="btn btn-success"> <a href="view\etudiant.html"
+            style="color: white; text-decoration: none;">Etudiant</a></button>
+        <button type="button" class="btn btn-success"> <a href="view\gallerie.html"
+            style="color: white; text-decoration: none;">Galerie </a></button>
+      </div>
     </div>
+  </nav>
+
+  <div class="table-responsive container-xl">
+    <table class="table table-striped
+  table-hover	
+  table-borderless
+  align-middle"
+      style="height: 450px;width: 300px; margin-top: 5%; margin-left: 38%; background-color: black; border-radius: 20px;">
+      <thead class="t">
+        <tr>
+          <th>
+            <center><img style="border-radius: 200px; margin-left: 10%; border-color: white;" src="view\bestof.jpg"
+                alt="logo" width="35%" height="35%"></center>
+          </th>
+        </tr>
+        <form id="form" action="view\accueil.html">   
+        <tr class="">
+          <th><label for="exampleInputEmail1" class="form-label" style="color: white;">Login</label>
+            <input type="email" class="form-control" aria-describedby="emailHelp"
+              placeholder="Login" type="email" id="email" placeholder="mail" required>
+          </th>
+        </tr>
+        <tr class="">
+          <th> <label for="exampleInputPassword1" class="form-label" style="color: white;">Mot de pass</label>
+            <input type="password" class="form-control" id="Password" placeholder="Mot de pass" required>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <center>
+              <a href="./view/accueil.html">
+              <input type="submit" value="Connexion" class="btn btn-success"  style="color:white; text-decoration: none;"id="con">
+            </a>
+            </center>
+          </th>
+        </tr>
+      </form>
+      </thead>
+    </table>
+  </div>
+  <b>
+    <hr>
+    <p style="margin-left: 85%;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+        class="bi bi-c-circle" viewBox="0 0 16 16">
+        <path
+          d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8Zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0ZM8.146 4.992c-1.212 0-1.927.92-1.927 2.502v1.06c0 1.571.703 2.462 1.927 2.462.979 0 1.641-.586 1.729-1.418h1.295v.093c-.1 1.448-1.354 2.467-3.03 2.467-2.091 0-3.269-1.336-3.269-3.603V7.482c0-2.261 1.201-3.638 3.27-3.638 1.681 0 2.935 1.054 3.029 2.572v.088H9.875c-.088-.879-.768-1.512-1.729-1.512Z" />
+      </svg>2021 Meta Team</p>
+  </b>
+
+  <script src="view\ex.js">
+
+  </script>
+
 </body>
+
 </html>
