--- a/index.html
+++ b/index.html
@@ -1,85 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<link rel="stylesheet" href="view/style/style.css">
-     <title>ACCUEIL</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href="https://fr.allfont.net/allfont.css?fonts=montserrat" rel="stylesheet" type="text/css" />
+    <style>
+        body {
+            font-family: 'Montserrat', arial;
+        }
+    </style>
 </head>
+
 <body>
-    <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <div class="container-xxxl bg-light">
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
-            <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
-          </svg></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                 Services
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Projects
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">About</a>
-                  </li>
-              </li>
-                </ul>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <button class="btn btn-dark"><a class="a text-light" href="#">Contact us</a></button>
-            </form>
-          </div>
+
+    <div class="row">
+        <div class="col-4" style="background-color: gray; text-align: center;">
+            <nav id="navbar-example3" class="h-2 flex-column align-items-stretch pe-4 border-end">
+                <nav class="nav nav-pills flex-column">
+                    <a class="nav-link" href="#section1"><button type="button" class="btn btn-primary btn-lg"> Section
+                            1</button></a>
+                    <a class="nav-link" href="#section2"><button type="button" class="btn btn-primary btn-lg">Section
+                            2</button></a>
+                    <a class="nav-link" href="#section3"><button type="button" class="btn btn-primary btn-lg">Section
+                            3</button></a>
+                    <nav class="nav nav-pills flex-column">
+                        <a class="nav-link" href="#section4"><button type="button"
+                                class="btn btn-primary btn-lg">Section 4</button></a>
+                        <nav class="nav nav-pills flex-column">
+                            <a class="nav-link ms-3 my-1" href="#passage"><button type="button"
+                                    class="btn btn-primary btn-sm">Passage</button></a>
+                            <a class="nav-link ms-3 my-1" href="#citation"><button type="button"
+                                    class="btn btn-primary btn-sm">Citation</button></a>
+                        </nav>
+                    </nav>
+                </nav>
         </div>
-      </nav> 
-      <div class="container-xl">
-        <div class="row bg-dark " style="padding:0.1em">
-            <div class="col-8 bg-light rounded-4 p-4"><p class="fs-1 "><strong class="police">Look<br>beyond<br>limits</strong></p></div>
-            <div class="col-4 bg-light rounded-4 p-4"></div>
-        </div>
-    <div class="row bg-dark" style="padding-left: 0.1em; padding-right: 0.1em; padding-bottom: 0.1em;">
-                <div class="col rounded-4 bg-light fs-4 p-5">
-                    They are very <br>
-                    proactive and work to <br>
-                    make your product <br>
-                    even better.
+
+        <div class="col-8">
+            <div class="container-xl">
+                <p style="text-align:center; font-size:xx-large;"> <b>THEME:</b> Lorem Ipsum</p>
+                <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true"
+                    class="scrollspy-example-2" tabindex="0">
+
+                    <div class="row">
+                        <div class="col-4">
+                            <hr style="width: 04cm; color: blue;">
+                        </div>
+                        <div class="col-4" id="section1">
+                            <h4 style="text-align: center; color:blue;">Section 1</h4>
+                        </div>
+                        <div class="col-4">
+                            <hr style="width: 04cm; color: blue;">
+                        </div>
+                    </div>
+                    <div style="width:50% ; text-align: left; float: left;">
+                        <h6> <b>Qu'est-ce que le Lorem Ipsum?</b> </h6>
+                        <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en
+                            page.</p>
+                    </div>
+                    <div style="width: 50%;  text-align: right; float: right;">
+                        <h6 style="margin-right: 20%;"> <b> Pourquoi l'utiliser?</b></h6>
+                        <p>On sait depuis longtemps que travailler avec du texte lisible et contenant du sens est
+                            source de distractions, et.</p>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-4">
+                            <hr style="width: 04cm; color: blue;">
+                        </div>
+                        <div class="col-4" id="section2">
+                            <h4 style="text-align: center; color:blue;">Section 2</h4>
+                        </div>
+                        <div class="col-4">
+                            <hr style="width: 04cm; color: blue;">
+                        </div>
+                    </div>
+                    <div>
+                        <h6> <b> D'où vient-il?</b></h6>
+                        <p>Contrairement à une opinion répandue, le Lorem Ipsum n'est pas simplement du texte aléatoire.
+                            Il trouve ses racines dans une oeuvre de la littérature latine classique datant de 45 av.
+                            J.-C., le rendant vieux de 2000 ans. Un professeur du Hampden-Sydney College, en Virginie,
+                            s'est intéressé à un des mots latins les plus obscurs, consectetur, extrait d'un passage du
+                            Lorem Ipsum, et en</p>
+                    </div>
+
                 </div>
-<div class="col rounded-4 bg-light fs-4 p-5">
-                    <p>The most experienced, <br>
-                        specialised team across <br>
-                        the industry. <br></p>
-                    <p class="blockquote-footer"><u>Work with us</u></p>
+                <div class="row">
+                    <div class="col-4">
+                        <hr style="width: 04cm; color: blue;">
+                    </div>
+                    <div class="col-4" id="section3">
+                        <h4 style="text-align: center; color:blue;">Section 3</h4>
+                        </h4>
+                    </div>
+                    <div class="col-4">
+                        <hr style="width: 04cm; color: blue;">
+                    </div>
                 </div>
-                <div class="col rounded-4 bg-light display-1 p-5"><strong class="police">3D</strong>
+                <div>
+
+                    <h6> <b>Où puis-je m'en procurer? </b> </h6>
+                    <p>Plusieurs variations de Lorem Ipsum peuvent être trouvées ici ou là, mais la majeure partie
+                        d'entre elles a été altérée par l'addition d'humour ou de mots aléatoires qui ne ressemblent
+                        pas une seconde à du texte standard. Si vous voulez utiliser un passage du Lorem Ipsum, vous
+                        devez être sûr qu'il n'y a rien d'embarrassant caché dans le texte. Tous les générateurs de
+                        Lorem Ipsum sur.</p>
+                </div>
+
+                <div class="row">
+                    <div class="col-4">
+                        <hr style="width: 04cm; color: blue;">
+                    </div>
+                    <div class="col-4" id="section4">
+                        <h4 style="text-align: center; color:blue;">Section 4</h4>
+                        </h4>
+                    </div>
+                    <div class="col-4">
+                        <hr style="width: 04cm; color: blue;">
+                    </div>
+                </div>
+                <div>
+
+                </div>
+                <div id="passage">
+                    <h6> <b>Le passage de Lorem Ipsum standard, utilisé depuis 1500</b> </h6>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat"</p>
+                    <p>cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <div id="citation">
+                    <h6> <b>Citation</b> </h6>
+                    <p> Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page
+                        avant impression.</p>
+                    <figure class="text-center">
+                        <figcaption class="blockquote-footer">
+                            <b style="color: black;">Coco DIOUF,</b><cite title="Source Title">COCOOOOO</cite>
+                        </figcaption>
+                    </figure>
                 </div>
             </div>
         </div>
+        <pre></pre>
+        <hr>
+        <p style="margin-left: 65%;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-c-circle" viewBox="0 0 16 16">
+                <path
+                    d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8Zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0ZM8.146 4.992c-1.212 0-1.927.92-1.927 2.502v1.06c0 1.571.703 2.462 1.927 2.462.979 0 1.641-.586 1.729-1.418h1.295v.093c-.1 1.448-1.354 2.467-3.03 2.467-2.091 0-3.269-1.336-3.269-3.603V7.482c0-2.261 1.201-3.638 3.27-3.638 1.681 0 2.935 1.054 3.029 2.572v.088H9.875c-.088-.879-.768-1.512-1.729-1.512Z" />
+            </svg>2021 Meta Team</p>
     </div>
+
+    </div>
+
 </body>
+
 </html>
